[package]
name = "scrambler"
version = "0.1.0"
edition = "2021"
description = "A simple command line tool to scramble letters"
authors = ["Diaa Kasem<me@diaa.me>"]
license = "MIT"
repository = "https://github.com/diaakasem/scrambler"
readme = "README.md"
keywords = ["scrambler", "scramble", "letters", "words"]

[dependencies]
clap = "4.1.4"
rand = "0.8.5"
regex = "1.7.1"
